--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="stylesheet" href="./css//main.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script defer src="./js//main.js"></script>
   </head>
   <body>
@@ -77,6 +89,7 @@
         <ul class="main-menu">
           <li class="item">
             <div class="item__name">COFFEE</div>
+            <!-- 언더바 두개는 item의 일부분이다 라는것을 표시 -->
             <div class="item__contents">
               <div class="contents__menu">
                 <ul class="inner">
@@ -377,6 +390,15 @@
             </div>
           </li>
         </ul>
+      </div>
+
+      <div class="badges">
+        <div class="badge">
+          <img src="./images/badge1.jpg" alt="Badge" />
+        </div>
+        <div class="badge">
+          <img src="./images/badge2.jpg" alt="Badge" />
+        </div>
       </div>
     </header>
   </body>
