--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!-- gsap & scroll to plugin -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"
+      integrity="sha512-1PKqXBz2ju2JcAerHKL0ldg0PT/1vr3LghYAtc59+9xy8e19QEtaNUyt1gprouyWnpOPqNJjL4gXMRMEpHYyLQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- swiper -->
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
     <!-- scrollMagic -->
@@ -792,5 +799,9 @@
         <img src="./images/starbucks_logo_only_text.png" alt="" class="logo" />
       </div>
     </footer>
+
+    <div id="to-top">
+      <div class="material-icons">arrow_upward</div>
+    </div>
   </body>
 </html>
