--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
@@ -77,7 +78,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <script defer src="./js/youtube.js"></script>
-    <script defer src="./js//main.js"></script>
+    <script defer src="./js/common.js"></script>
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
     <!-- 구글 아이콘 사용을 위해서는 클래스명 설정 후 아이콘 이름 입력 -->
@@ -482,7 +484,7 @@
                 </div>
                 <div class="swiper-slide">
                   <a href="javascript:void(0)"
-                    >[당첨자 발표] 2021 스타벅스 플래너 영수증 이벤트</a
+                    >[당첨자 발표] 202 스타벅스 플래너 영수증 이벤트</a
                   >
                 </div>
                 <div class="swiper-slide">
